--- a/app/composer.json
+++ b/app/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.2.11",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
@@ -22,6 +23,7 @@
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/serializer": "6.3.*",
+        "symfony/validator": "^6.4",
         "symfony/yaml": "6.3.*"
     },
     "config": {
