mise en place du crud avec api platform

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -45,6 +45,8 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+        - { path: ^/apip/, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/apip, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
