--- a/app/config/packages/nelmio_api_doc.yaml
+++ b/app/config/packages/nelmio_api_doc.yaml
@@ -52,4 +52,4 @@ nelmio_api_doc:
             - bearerAuth: []
     areas: # to filter documented areas
         path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+            - ^/api(?!/doc$) # Accepts routes under /api except /api/docInfolegale1
